--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -94,4 +94,106 @@ html {
 }
 .wrap nav .rigthSide {
   margin-top: 210px;
+}
+.wrap .centeralSide {
+  width: 100%;
+  height: 100vh;
+  margin-top: 10%;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.wrap .centeralSide .container {
+  max-width: 800px;
+  margin: auto;
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+.wrap .centeralSide h2,
+.wrap .centeralSide h3 {
+  color: #333;
+  border-bottom: 2px solid #e9ecef;
+  padding-bottom: 5px;
+}
+.wrap .centeralSide .section {
+  margin-bottom: 20px;
+  padding: 15px;
+  background: rgba(233, 236, 239, 0.231372549);
+  border-radius: 5px;
+}
+.wrap .centeralSide .section ul {
+  list-style-type: square;
+  padding-left: 20px;
+}
+.wrap .bottomSide {
+  background-color: #ffb319;
+  height: 370px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  font-family: "Poppins", sans-serif;
+}
+.wrap .bottomSide .main__bottom-nav {
+  display: flex;
+  gap: 300px;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__info .bottom__logo {
+  width: 80px;
+  font-weight: 700;
+  font-size: 22px;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__info .bottom__desc {
+  width: 170px;
+  color: #423315;
+  font-size: 15px;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__navigation {
+  color: black;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__navigation .navBtns a {
+  transition: 0.3s;
+  color: black;
+  cursor: pointer;
+  text-decoration: none;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__navigation .navBtns a:hover {
+  text-decoration: underline;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__buttons button {
+  padding: 16px 32px;
+  border: none;
+  color: black;
+  border-radius: 30px;
+  font-weight: 500;
+  transition: 0.2s;
+  font-size: 14px;
+  background-color: #ffb319;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__social .icons__social {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+.wrap .bottomSide .main__bottom-nav .bottom__social .icons__social i {
+  font-size: 30px;
+  cursor: pointer;
+}
+.wrap .bottomSide .bottom__company::first-letter {
+  font-size: 20px;
+  font-weight: 600;
 }/*# sourceMappingURL=blog.css.map */
