--- a/public/scss/_centeralSide.scss
+++ b/public/scss/_centeralSide.scss
@@ -3,6 +3,7 @@
 .centeralSide {
     width: 100%;
     height: 190vh;
+
     .choise {
         display: flex;
         justify-content: center;
@@ -137,6 +138,12 @@
             &:hover {
                 background-color: transparent;
                 color: black;
+                a {
+                    color: black;
+                }
+            }
+            a {
+                color: white;
             }
         }
     }
