--- a/public/scss/_topside.scss
+++ b/public/scss/_topside.scss
@@ -103,7 +103,13 @@
                     font-size: 14px;
                     &:hover {
                         background-color: transparent;
-                        color: black;
+                        a {
+                            color: black;
+                        }
+                    }
+
+                    a {
+                        color: white;
                     }
                 }
             }
