--- a/public/scss/blog.scss
+++ b/public/scss/blog.scss
@@ -100,4 +100,111 @@ html {
             margin-top: 210px;
         }
     }
+    .centeralSide {
+        width: 100%;
+        height: 100vh;
+        margin-top: 10%;
+        font-family: 'Poppins', sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        h2,
+        h3 {
+            color: #333;
+            border-bottom: 2px solid #e9ecef;
+            padding-bottom: 5px;
+        }
+        .section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: #e9ecef3b;
+            border-radius: 5px;
+        }
+        .section ul {
+            list-style-type: square;
+            padding-left: 20px;
+        }
+    }
+    .bottomSide {
+        background-color: #ffb319;
+        height: 370px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-family: 'Poppins', sans-serif;
+
+        .main__bottom-nav {
+            display: flex;
+            gap: 300px;
+            .bottom__info {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                .bottom__logo {
+                    width: 80px;
+                    font-weight: 700;
+                    font-size: 22px;
+                }
+                .bottom__desc {
+                    width: 170px;
+                    color: #423315;
+                    font-size: 15px;
+                }
+            }
+            .bottom__navigation {
+                color: black;
+                .navBtns {
+                    a {
+                        transition: 0.3s;
+                        color: black;
+                        cursor: pointer;
+                        text-decoration: none;
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+            .bottom__buttons {
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                button {
+                    padding: 16px 32px;
+                    border: none;
+                    color: black;
+                    border-radius: 30px;
+                    font-weight: 500;
+                    transition: 0.2s;
+                    font-size: 14px;
+                    background-color: #ffb319;
+                    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+                }
+            }
+            .bottom__social {
+                .icons__social {
+                    display: flex;
+                    gap: 20px;
+                    margin-top: 20px;
+                    i {
+                        font-size: 30px;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+        .bottom__company::first-letter {
+            font-size: 20px;
+            font-weight: 600;
+        }
+    }
 }
